# helix

./: .cg  .gitignore  Cargo.toml  README.md  ast.rs  benches.rs  build.rs  build.sh  cbindgen.toml  edit.sh  error.rs  integration.rs  lexer.rs  lib.rs  liblexer.rlib  osxcross.sh  parser.rs  pyproject.toml  server.rs  tests.rs  tree.txt  types.rs  verify.rs
.cargo/: config.toml
benches/: parser_bench.rs
binaries/: test_example_opt_three.hlxb  test_example_opt_two.hlxb
bindings/ruby/: Cargo.toml
bindings/ruby/src/: lib.rs
compiler/: archived-main.rs  cli.rs  loader.rs  main.rs  modules.rs  serializer.rs
compiler/cli/: project.rs  publish.rs  tools.rs  workflow.rs
compiler/config/: config.rs  doctor.rs  mod.rs
compiler/project/: add.rs  init.rs
compiler/publish/: export.rs  mod.rs  publish.rs
compiler/tools/: lint.rs  migrate.rs  mod.rs
compiler/workflow/: bench.rs  run.rs  serve.rs  test.rs  watch.rs
examples/: Cargo.toml  README.md  advanced_usage.rs  calculator_demo.rs  customer_support.hlxb  example.hlx  example_project_Cargo.toml  example_project_src_main.rs  hlx_demo.rs  load.rs  project.hlx  simple_hlx_usage.rs  test_parser.rs
hlx_test/: CREATION_SUMMARY.md  README.md  how-to-enhance.md  test_syntax_fixed.hlx  test_transform.hlx  token.md
hlx_test/config/: 01-project-roadmap.hlx  02-codebase.hlx  03-todolist.hlx  04-notes.hlx  05-blog.hlx  06-static-site.hlx  07-microservice.hlx  08-ci-pipeline.hlx  09-cd-deployment.hlx  10-data-pipeline.hlx  11-backup-policy.hlx  12-monitoring.hlx  13-feature-flags.hlx  14-user-schema.hlx  15-api-gateway.hlx  16-docker-compose.hlx  17-k8s-deployment.hlx  18-serverless-func.hlx  19-iot-device.hlx  20-chatbot-persona.hlx  21-db-pool.hlx  22-email-server.hlx  23-feature-dashboard.hlx  24-log-aggregation.hlx  25-security-policy.hlx  26-scheduler-jobs.hlx  27-graphql-server.hlx  28-cache-layer.hlx  29-message-queue.hlx  30-gitops-repo.hlx  31-ml-model.hlx  32-ab-test.hlx  33-oauth-client.hlx  34-s3-bucket-policy.hlx  35-launchdarkly.hlx  36-ingress.hlx  37-k8s-cronjob.hlx  38-websocket.hlx  39-redis-cluster.hlx  40-tls-rotation.hlx  (+16 more)
hlx_test/data/: large_dataset.hlx  sample_data.hlxj
hlx_test/examples/: advanced_usage.rs  ai_development_team.hlxb  basic_parsing.rs  calculator_demo.rs  compiler_integration.rs  comprehensive_example.rs  example_project_src_main.rs  file_type_guide.md  hlx_demo.rs  load-helix-from-localhost.rs  minimal.hlx  programmatic_usage_example.rs  simple_hlx_usage.rs  simple_test.hlx
hlx_test/src/: lib.rs  main.rs  test_enhancements.rs
hlx_test/ugly/: test_all_syntax.hlx  test_chain_example.hlx  test_compile.rs  test_env_demo.hlx  test_env_operator.rs  test_export_compile.rs  test_operator_variable_markers.hlx  test_parser.rs  test_results.txt  test_roadmap.hlx  test_roadmap_schema.rs  test_syntax.hlx  test_syntax_equivalence.hlx  test_syntax_schema.py  test_tilde_syntax.hlx  test_variable_markers.hlx  test_variable_markers.rs
hlx_test/util/: hlx_util.rs  hlxb_util.rs  hlxc_util.rs
src/: ast.rs  codegen.rs  dispatch.rs  dna_hlx.rs  error.rs  hlx.rs  integration.rs  interpreter.rs  lexer.rs  lib.rs  ops.rs  output.rs  parser.rs  programmatic_usage_example.rs  python.rs  semantic.rs  server.rs  types.rs  value.rs  verify.rs
src/binaries/: minimal_opt_one.hlxb  minimal_opt_three.hlxb  minimal_opt_two.hlxb  minimal_opt_zero.hlxb  test_example_opt_one.hlxb  test_example_opt_zero.hlxb
src/compiler/: cli.rs  loader.rs  main.rs  mod.rs  modules.rs  optimizer.rs  runtime.rs  serializer.rs
src/compiler/cli/: config.rs  project.rs  publish.rs  tools.rs  workflow.rs
src/compiler/config/: config.rs
src/compiler/examples/: README.md  advanced_usage.rs  basic_parsing.rs  compiler_integration.rs  comprehensive_example.hlxb  data_pipeline.hlxb  hlx_demo.rs  load-helix-from-localhost.rs  load.rs  research_assistant.hlxb
src/compiler/project/: clean.rs  init.rs  mod.rs
src/compiler/publish/: export.rs  sign.rs
src/compiler/tools/: generate.rs
src/compiler/workflow/: mod.rs
src/dna/: compiler.rs  mod.rs
src/dna/atp/: ast.rs  interpreter.rs  lexer.rs  ops.rs  output.rs  parser.rs  types.rs  value.rs  verify.rs
src/dna/bch/: parser_bench.rs
src/dna/cmd/: add.rs  bench.rs  build.rs  compile.rs  completions.rs  config.rs  dataset.rs  decompile.rs  diff.rs  export.rs  fmt.rs  info.rs  lint.rs  migrate.rs  mod.rs  preview.rs  project.rs  publish.rs  runtime.rs  schema.rs  search.rs  serializer.rs  serve.rs  sign.rs  templates.rs  tools.rs  watch.rs
src/dna/exp/: basic_parsing.rs  hlx_format copy.rs  mod.rs
src/dna/ffi/: csharp.rs  mod.rs
src/dna/hel/: dispatch.rs  dna_hlx.rs  hlx.rs  integration.rs  mod.rs
src/dna/map/: core.rs  mod.rs  process_safetensors_file.rs  split_content.rs
src/dna/mds/: build.rs  bundle.rs  compile.rs  config.rs  dataset.rs  decompile.rs  diagnostics.rs  diff.rs  export.rs  import.rs  info.rs  init.rs  loader.rs  map.rs  mod.rs  modules.rs  optimizer.rs  preview.rs  project.rs  publish.rs  runtime.rs
src/dna/ngs/: python.rs
src/dna/ops/: conditional.rs  engine.rs  eval.rs  fundamental.rs  math.rs  mod.rs  parser.rs  string_processing.rs  utils.rs  validation.rs
src/examples/: basic_parsing.rs  hlx_format copy.rs
src/ffi/: csharp.rs
src/json/: concat.rs  core.rs  hf.rs  mod.rs
src/json/tests/: hlx_integration_tests.rs
src/mldt/: data.rs  ml.rs  util.rs
src/operators/: conditional.rs  eval.rs  fundamental.rs  math.rs  mod.rs  parser.rs  string_processing.rs  ulator.pest  validation.rs
src/operators/old_ops/: advanced.rs  advanced.rs.backup  amqp.rs  cloud.rs  (+35 more)
src/output/: helix_format.rs  hlx_config_format.rs  hlxb_config_format.rs  hlxc_format.rs
src/tests/: calculator_integration_tests.rs  debug_parse.rs  debug_semantic.rs  e621_tests.rs  forge.hlx  forge.hlxb  forge_integration_demo.rs  fundamental_ops.rs  hlxc_try.rs  integration_tests.rs  load.rs  t-r-y-h-l-x.rs  test_binary_loading.rs  test_duration_space.rs  test_lexer_fixes.rs  text_tests.rs
tests/: forge_integration_demo.rs  integration_tests.rs  test_binary_loading.rs
(+5 files in other folders)
