[package]
name = "hlx"
version = "1.1.6"
edition = "2021"
authors = ["Bernie", "Buddy"]
description = "Configuration language designed specifically for AI systems"
license = "MIT"
repository = "https://github.com/cyber-boost/helix"
keywords = ["configuration", "ai", "agents", "compiler", "parser"]
categories = ["config", "parsing", "development-tools"]
include = ["examples/**/*", "src/**/*", "compiler/**/*", "bin/**/*", "json/**/*", "README.md", "LICENSE", "Cargo.toml", "TREAT.md", "legal/**/*"]

[lib]
name = "helix_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "hlx"
path = "src/bin/helix.rs"
required-features = ["cli"]

[[bin]]
name = "verify"
path = "src/verify.rs"

[[bin]]
name = "test_edge_cases"
path = "src/bin/test-utils/test_edge_cases.rs"

[[bin]]
name = "create_binaries"
path = "src/bin/test-utils/create_binaries.rs"

[[example]]
name = "basic_parsing"
path = "src/examples/basic_parsing.rs"

[[example]]
name = "compiler_integration"
path = "src/examples/compiler_integration.rs"
required-features = ["compiler"]

[[example]]
name = "advanced_usage"
path = "src/examples/advanced_usage.rs"

[[example]]
name = "load"
path = "src/examples/load.rs"
required-features = ["compiler"]

[features]
default = ["compiler", "cli", "chrono"]
compiler = ["bincode", "lz4_flex", "crc32fast", "memmap2"]
cli = ["clap", "compiler", "colored", "indicatif", "notify", "dirs", "toml_edit", "tempfile", "reqwest", "sha2", "which", "chrono"]
full = ["compiler", "cli"]
# Musl-compatible features (exclude zstd which has glibc dependencies)
musl = ["bincode", "lz4_flex", "crc32fast", "memmap2", "cli", "compiler"]

[dependencies]
# Core dependencies (always needed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Migration dependencies (for TOML/YAML support)
toml = "0.8"
serde_yaml = "0.9"

# Compiler dependencies (optional)
bincode = { version = "1.3", optional = true }
lz4_flex = { version = "0.11", optional = true }
crc32fast = { version = "1.3", optional = true }
memmap2 = { version = "0.9", optional = true }
zstd = { version = "0.13", optional = true }
md5 = "0.7"

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive", "env", "wrap_help"], optional = true }
colored = { version = "2.1", optional = true }
indicatif = { version = "0.17", optional = true }
notify = { version = "6.1", optional = true }

# Project management dependencies
dirs = { version = "5", optional = true }
toml_edit = { version = "0.22", optional = true }
tempfile = { version = "3", optional = true }

# HTTP & Networking
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }

# Process management
which = { version = "4.4", optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"], optional = true }

# Random number generation for dataset processing
rand = "0.8"

# Async trait support for dataset processors
async-trait = "0.1"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }

# Regular expressions
fancy-regex = "0.13"

# Logging
log = "0.4"

# Parallel processing
rayon = "1.8"

# Directory walking
walkdir = "2.4"

# CPU detection
num_cpus = "1.16"

# SafeTensors format support
safetensors = "0.4"

# HuggingFace Hub integration
hf-hub = "0.4.3"
parquet = "56.2.0"
arrow = "56.2.0"

# Development dependencies
[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3.10"
insta = "1.38"

[[bench]]
name = "parser_bench"
harness = false
path = "src/benches/parser_bench.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true