[package]
name = "helix-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
helix = { path = "..", features = ["compiler"] }

[[example]]
name = "basic_parsing"
path = "basic_parsing.rs"

[[example]]
name = "compiler_integration"
path = "compiler_integration.rs"
required-features = ["compiler"]

[[example]]
name = "advanced_usage"
path = "advanced_usage.rs"
